# KNN_SOCKET

./: CMakeLists.txt  Makefile  README.md
app/header/: CLI.h  Command.h  DefaultIO.h  StandardIO.h
app/src/: CLI.cpp  Command.cpp  DefaultIO.cpp  StandardIO.cpp
client/: ClientSide.cpp  ClientSide.h
client/header/Command/: ClientAlgorithmCommand.h  ClientClassifyCommand.h  ClientCommandFactory.h  ClientDisplayCommand.h  ClientDownloadCommand.h  ClientExitCommand.h  ClientUploadCommand.h
client/header/Manager/: ClientManager.h
client/header/TCP/: TCPClient.h
client/src/Command/: ClientAlgorithmCommand.cpp  ClientClassifyCommand.cpp  ClientCommandFactory.cpp  ClientDisplayCommand.cpp  ClientDownloadCommand.cpp  ClientExitCommand.cpp  ClientUploadCommand.cpp
client/src/Manager/: ClientManager.cpp
client/src/TCP/: TCPClient.cpp
server/: ServerSide.cpp  ServerSide.h
server/header/DIO/: SocketIO.h
server/header/TCP/: TCP_Server.h
server/header/commands/: AlgoSetCommand.h  ClassifyDataCommand.h  ExitCommand.h  SendFileCommand.h  UploadCommand.h
server/header/database/: Classification.h  DataBase.h
server/header/distance/: CanberraDistance.h  ChebyshevDistance.h  Distance.h  EuclideanDistance.h  ManhattanDistance.h  MinkowskiDistance.h
server/header/factory/: DistanceFactory.h  ServerCommandFactory.h
server/header/util/: DataProvider.h  Functor.h  Util.h
server/src/DIO/: SocketIO.cpp
server/src/TCP/: TCP_Server.cpp
server/src/commands/: AlgoSetCommand.cpp  ClassifyDataCommand.cpp  ExitCommand.cpp  SendFileCommand.cpp  UploadCommand.cpp
server/src/database/: Classification.cpp  DataBase.cpp
server/src/distance/: CanberraDistance.cpp  ChebyshevDistance.cpp  Distance.cpp  EuclideanDistance.cpp  ManhattanDistance.cpp  MinkowskiDistance.cpp
server/src/factory/: DistanceFactory.cpp  ServerCommandFactory.cpp
server/src/util/: DataProvider.cpp  Functor.cpp  Util.cpp
